[package]
name = "rustkernel"
version = "0.0.10"
authors = ["Jack Clayton"]
description = "Kernel for running Rust code interactively in VS Code, will later be extended to other platforms"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustnote/rustkernel"
documentation = "https://docs.rs/rustkernel/"
homepage = "https://rustnote.com"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
regex = "1"
substring = "1.4.5"

[net]
git-getch-with-cli = true

[[bin]]
name = "rustkernel"
path = "src/main.rs"
