[package]
name = "rustkernel"
version = "0.0.19"
authors = ["Jack Clayton"]
description = "Kernel for running Rust code interactively in VS Code Notebook"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustnote/rustkernel"
documentation = "https://docs.rs/rustkernel/"
homepage = "https://rustnote.com"
edition = "2021"

[[bin]]
name = "rustkernel"
path = "src/main.rs"
